# Onebio

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  run_ui.py
demo/: demo_checker_output.csv
demo/manifest/: ast_long.tsv  checker_selected_rows.csv  manifest.tsv  manifest_qc.json
demo/toy_genomes/SAMN00000001/: amr_hits.tsv  annotation.gff  genome.fna  locus_map.tsv
docs/: ARCHITECTURE.md  OUTPUT_CONTRACT.md
src/onebio_amr_atlas/: atlas_explorer.py  build_orthogroup_expression.py  cli.py  doctor.py  gff.py  io_qc.py  manifest_bridge.py  module_a.py  module_b.py  module_c.py  module_d.py  module_e.py  module_f.py  net.py  pipeline.py  prepare_panaroo_inputs.py  rnaseq_amr_checker.py  same_gene_locus_catalog.py  ui.py  utils.py
tests/: test_manifest_bridge.py
